// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/posts Create 1`] = `
Object {
  "access-control-allow-headers": "authorization, x-total-count, content-type",
  "access-control-allow-methods": "DELETE, GET, OPTIONS, POST, PUT",
  "access-control-allow-origin": "*",
  "access-control-expose-headers": "authorization, x-total-count, content-type",
  "connection": "close",
  "content-length": "9",
  "content-type": "application/json; charset=utf-8",
  "etag": "W/\\"9-rD5kVc2LU759KDT3/yQVEh3R/cQ\\"",
  "x-powered-by": "Express",
}
`;

exports[`/posts Create 2`] = `
Object {
  "id": 36,
}
`;

exports[`/posts Create 3`] = `
Object {
  "access-control-allow-headers": "authorization, x-total-count, content-type",
  "access-control-allow-methods": "DELETE, GET, OPTIONS, POST, PUT",
  "access-control-allow-origin": "*",
  "access-control-expose-headers": "authorization, x-total-count, content-type",
  "connection": "close",
  "content-length": "62",
  "content-type": "application/json; charset=utf-8",
  "etag": "W/\\"3e-bGbPEN+JDQwRoRLm1cSBgSuDCMg\\"",
  "x-powered-by": "Express",
}
`;

exports[`/posts Create 4`] = `
Object {
  "body": "A new body",
  "id": 36,
  "title": "A new title",
  "userId": 2,
}
`;

exports[`/posts Delete (Not found) 1`] = `
Object {
  "access-control-allow-headers": "authorization, x-total-count, content-type",
  "access-control-allow-methods": "DELETE, GET, OPTIONS, POST, PUT",
  "access-control-allow-origin": "*",
  "access-control-expose-headers": "authorization, x-total-count, content-type",
  "connection": "close",
  "content-length": "28",
  "content-type": "application/json; charset=utf-8",
  "etag": "W/\\"1c-i0EptGmraAHmxP2zNRGy7HQtj2g\\"",
  "x-powered-by": "Express",
}
`;

exports[`/posts Delete (Not found) 2`] = `
Object {
  "message": "Data not found",
}
`;

exports[`/posts Delete 1`] = `
Object {
  "access-control-allow-headers": "authorization, x-total-count, content-type",
  "access-control-allow-methods": "DELETE, GET, OPTIONS, POST, PUT",
  "access-control-allow-origin": "*",
  "access-control-expose-headers": "authorization, x-total-count, content-type",
  "connection": "close",
  "content-length": "8",
  "content-type": "application/json; charset=utf-8",
  "etag": "W/\\"8-GmFGyLK2736etq0w88WOBfa7S5o\\"",
  "x-powered-by": "Express",
}
`;

exports[`/posts Delete 2`] = `
Object {
  "id": 4,
}
`;

exports[`/posts Get details 1`] = `
Object {
  "access-control-allow-headers": "authorization, x-total-count, content-type",
  "access-control-allow-methods": "DELETE, GET, OPTIONS, POST, PUT",
  "access-control-allow-origin": "*",
  "access-control-expose-headers": "authorization, x-total-count, content-type",
  "connection": "close",
  "content-length": "261",
  "content-type": "application/json; charset=utf-8",
  "etag": "W/\\"105-YGOc7AML8El062v0h5XH2RJb2Ak\\"",
  "x-powered-by": "Express",
}
`;

exports[`/posts Get details 2`] = `
Object {
  "body": "est rerum tempore vitae
sequi sint nihil reprehenderit dolor beatae ea dolores neque
fugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis
qui aperiam non debitis possimus qui neque nisi nulla",
  "id": 2,
  "title": "qui est esse",
  "userId": 1,
}
`;

exports[`/posts Get list 2`] = `
Array [
  Object {
    "body": "quia et suscipit
suscipit recusandae consequuntur expedita et cum
reprehenderit molestiae ut ut quas totam
nostrum rerum est autem sunt rem eveniet architecto",
    "id": 1,
    "title": "sunt aut facere repellat provident occaecati excepturi optio reprehenderit",
    "userId": 1,
  },
  Object {
    "body": "est rerum tempore vitae
sequi sint nihil reprehenderit dolor beatae ea dolores neque
fugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis
qui aperiam non debitis possimus qui neque nisi nulla",
    "id": 2,
    "title": "qui est esse",
    "userId": 1,
  },
  Object {
    "body": "et iusto sed quo iure
voluptatem occaecati omnis eligendi aut ad
voluptatem doloribus vel accusantium quis pariatur
molestiae porro eius odio et labore et velit aut",
    "id": 3,
    "title": "ea molestias quasi exercitationem repellat qui ipsa sit aut",
    "userId": 1,
  },
  Object {
    "body": "ullam et saepe reiciendis voluptatem adipisci
sit amet autem assumenda provident rerum culpa
quis hic commodi nesciunt rem tenetur doloremque ipsam iure
quis sunt voluptatem rerum illo velit",
    "id": 4,
    "title": "eum et est occaecati",
    "userId": 1,
  },
  Object {
    "body": "repudiandae veniam quaerat sunt sed
alias aut fugiat sit autem sed est
voluptatem omnis possimus esse voluptatibus quis
est aut tenetur dolor neque",
    "id": 5,
    "title": "nesciunt quas odio",
    "userId": 1,
  },
  Object {
    "body": "ut aspernatur corporis harum nihil quis provident sequi
mollitia nobis aliquid molestiae
perspiciatis et ea nemo ab reprehenderit accusantium quas
voluptate dolores velit et doloremque molestiae",
    "id": 6,
    "title": "dolorem eum magni eos aperiam quia",
    "userId": 1,
  },
  Object {
    "body": "dolore placeat quibusdam ea quo vitae
magni quis enim qui quis quo nemo aut saepe
quidem repellat excepturi ut quia
sunt ut sequi eos ea sed quas",
    "id": 7,
    "title": "magnam facilis autem",
    "userId": 1,
  },
  Object {
    "body": "dignissimos aperiam dolorem qui eum
facilis quibusdam animi sint suscipit qui sint possimus cum
quaerat magni maiores excepturi
ipsam ut commodi dolor voluptatum modi aut vitae",
    "id": 8,
    "title": "dolorem dolore est ipsam",
    "userId": 1,
  },
  Object {
    "body": "consectetur animi nesciunt iure dolore
enim quia ad
veniam autem ut quam aut nobis
et est aut quod aut provident voluptas autem voluptas",
    "id": 9,
    "title": "nesciunt iure omnis dolorem tempora et accusantium",
    "userId": 1,
  },
  Object {
    "body": "quo et expedita modi cum officia vel magni
doloribus qui repudiandae
vero nisi sit
quos veniam quod sed accusamus veritatis error",
    "id": 10,
    "title": "optio molestias id quia eum",
    "userId": 1,
  },
]
`;

exports[`/posts Get list with filters 1`] = `
Object {
  "access-control-allow-headers": "authorization, x-total-count, content-type",
  "access-control-allow-methods": "DELETE, GET, OPTIONS, POST, PUT",
  "access-control-allow-origin": "*",
  "access-control-expose-headers": "authorization, x-total-count, content-type",
  "connection": "close",
  "content-length": "459",
  "content-type": "application/json; charset=utf-8",
  "etag": "W/\\"1cb-s+gNSj+z1ehK2xHiVB633IQyJss\\"",
  "x-powered-by": "Express",
  "x-total-count": "35",
}
`;

exports[`/posts Get list with filters 2`] = `
Array [
  Object {
    "body": "eveniet quo quis
laborum totam consequatur non dolor
ut et est repudiandae
est voluptatem vel debitis et magnam",
    "id": 18,
    "title": "voluptate et itaque vero tempora molestiae",
    "userId": 2,
  },
  Object {
    "body": "debitis eius sed quibusdam non quis consectetur vitae
impedit ut qui consequatur sed aut in
quidem sit nostrum et maiores adipisci atque
quaerat voluptatem adipisci repudiandae",
    "id": 31,
    "title": "ullam ut quidem id aut vel consequuntur",
    "userId": 4,
  },
]
`;

exports[`/posts Update 1`] = `
Object {
  "access-control-allow-headers": "authorization, x-total-count, content-type",
  "access-control-allow-methods": "DELETE, GET, OPTIONS, POST, PUT",
  "access-control-allow-origin": "*",
  "access-control-expose-headers": "authorization, x-total-count, content-type",
  "connection": "close",
  "content-length": "8",
  "content-type": "application/json; charset=utf-8",
  "etag": "W/\\"8-0rVkPUSjKXvAXSnOiVTQsEptELY\\"",
  "x-powered-by": "Express",
}
`;

exports[`/posts Update 2`] = `
Object {
  "id": 3,
}
`;

exports[`/posts Update 3`] = `
Object {
  "access-control-allow-headers": "authorization, x-total-count, content-type",
  "access-control-allow-methods": "DELETE, GET, OPTIONS, POST, PUT",
  "access-control-allow-origin": "*",
  "access-control-expose-headers": "authorization, x-total-count, content-type",
  "connection": "close",
  "content-length": "67",
  "content-type": "application/json; charset=utf-8",
  "etag": "W/\\"43-U1p8oEpX5SR+hfHzu+dBYvjQMnE\\"",
  "x-powered-by": "Express",
}
`;

exports[`/posts Update 4`] = `
Object {
  "body": "A edited body",
  "id": 3,
  "title": "A edited title",
  "userId": 3,
}
`;
